hopefully fixed font on iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ Global
 -------------------------------------------- */
 
 * {
-  font-family: montserrat;
+  font-family: montserrat, sans-serif;
   font-weight: 100;
 }
 h1 {
